tests/should_fail/unsupported/hash_map.coma
module M_hash_map__qyi5744717520881225036__new (* Foo *)
  use creusot.int.UInt64
  use creusot.prelude.Opaque
  use creusot.prelude.Any
  
  type t_RandomState = { t_RandomState__k0: UInt64.t; t_RandomState__k1: UInt64.t }
  
  type t_NonNull = { t_NonNull__pointer: Opaque.ptr }
  
  type t_RawTableInner = {
    t_RawTableInner__bucket_mask: UInt64.t;
    t_RawTableInner__ctrl: t_NonNull;
    t_RawTableInner__growth_left: UInt64.t;
    t_RawTableInner__items: UInt64.t }
  
  type t_RawTable = { t_RawTable__table: t_RawTableInner; t_RawTable__alloc: (); t_RawTable__marker: () }
  
  type t_HashMap = { t_HashMap__hash_builder: t_RandomState; t_HashMap__table: t_RawTable }
  
  type t_HashMap'0 = { t_HashMap__base: t_HashMap }
  
  type t_Foo = { t_Foo__0: t_HashMap'0 }
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec new (return' (x: t_Foo)) = (! bb0
    [ bb0 = {false} any ] [ & _0: t_Foo = Any.any_l () | & _1: t_HashMap'0 = Any.any_l () ])
    [ return''0 (result: t_Foo) -> (! return' {result}) ]
end
module M_hash_map__qyi5744717520881225036__add (* Foo *)
  use creusot.prelude.Any
  use creusot.prelude.MutBorrow
  use creusot.int.UInt64
  use creusot.prelude.Opaque
  use creusot.int.UInt8
  use map.Map
  
  type t_RandomState = { t_RandomState__k0: UInt64.t; t_RandomState__k1: UInt64.t }
  
  type t_NonNull = { t_NonNull__pointer: Opaque.ptr }
  
  type t_RawTableInner = {
    t_RawTableInner__bucket_mask: UInt64.t;
    t_RawTableInner__ctrl: t_NonNull;
    t_RawTableInner__growth_left: UInt64.t;
    t_RawTableInner__items: UInt64.t }
  
  type t_RawTable = { t_RawTable__table: t_RawTableInner; t_RawTable__alloc: (); t_RawTable__marker: () }
  
  type t_HashMap = { t_HashMap__hash_builder: t_RandomState; t_HashMap__table: t_RawTable }
  
  type t_HashMap'0 = { t_HashMap__base: t_HashMap }
  
  type t_Foo = { t_Foo__0: t_HashMap'0 }
  
  type t_FMap
  
  type t_Option = C_None | C_Some UInt8.t
  
  function view (self: t_FMap) : Map.map int t_Option
  
  function get [@inline:trivial] (self: t_FMap) (k: int) : t_Option = Map.get (view self) k
  
  meta "rewrite_def" function get
  
  function view'0 (self: t_HashMap'0) : t_FMap
  
  function view'1 [@inline:trivial] (self: t_Foo) : t_FMap = view'0 self.t_Foo__0
  
  meta "rewrite_def" function view'1
  
  meta "compute_max_steps" 1000000
  
  meta "select_lsinst" "all"
  
  let rec add (self: MutBorrow.t t_Foo) (num: UInt64.t) (bar: UInt8.t) (return' (x: ())) = (! bb0
    [ bb0 = {false} any ]
    [ & _0: () = Any.any_l ()
    | & self'0: MutBorrow.t t_Foo = self
    | & num'0: UInt64.t = num
    | & bar'0: UInt8.t = bar
    | & _6: MutBorrow.t UInt8.t = Any.any_l () ])
    [ return''0 (result: ()) -> {[@expl:add ensures] get (view'1 self.final) (UInt64.t'int num) = C_Some bar}
      (! return' {result}) ]
end
